# yellow_robot

./: Feet_mold_for_silicon.md  README.md  calibration_setup.md
OpenQuad_V2/: servos_initialization_config.md
OpenQuad_V2/L_leg/: shoulder_cover_v2.STL  shoulder_v2.STL
OpenQuad_V2/R_leg/: leg_v2.STL  shoulder_cover_v2.STL
OpenQuad_V2/body/: RPI4+Mano_board_plateform_v2.STL  back_cover_v2.STL  back_out_plate_v2.STL  front_cover_v2.stl  front_in_plate_v2.STL  front_out_plate_v2.STL  handle_v2.STL  plateform_left_side_v2.stl  plateform_right_side_v2.stl  top_cover_v2.STL
OpenQuad_V2/images/: SPOT MICRO Controller Manual.docx
OpenQuad_V2/robot_parts/L_leg/: hip_v2.STL  leg_v2.STL
OpenQuad_V2/robot_parts/L_legs_v4/: L_leg_1-2.stl  L_leg_2-2.stl
OpenQuad_V2/robot_parts/R_leg/: hip_v2.STL  shoulder_v2.STL
OpenQuad_V2/robot_parts/R_legs_v4/: R_leg_1-2.stl  R_leg_2-2.stl  R_shoulder_1-2.stl  R_shoulder_2-2.stl  R_shoulder_cover.stl
OpenQuad_V2/robot_parts/body/: D435_fix_plate_v2.STL  RPI4+Mano_board_plateform_v2.STL  back_in_plate_v2.STL  bottom_cover_v2_2-2.STL  head_speaker_fix_plate_v2.STL
OpenQuad_V2/robot_parts/body/body_cover/: bottom_cover_v2_1-2.STL
OpenQuad_V2/robot_parts/body/head_cover/: front_cover_v2.STL  head_speaker_grill_v2.STL
OpenQuad_V2/robot_parts/universel/: DS3218MG.step  HC-SR04P v1.stl  VIS_M5 v1.stl  electronic_fix_part.STL  foot_adaptator_spotmicro2openquad.STL  leg_pulley_for_V4.stl  roulement16-5-5 v1.stl  shoulder_pulley_for_V4.stl
OpenQuad_V2/robot_parts/universel/foot_mold_for_V4_legs/: mold_1-2.stl  mold_2-2.stl  upper_mold_part.stl
OpenQuad_V2/robot_parts/universel/stl_parts_for_3d_soft/: DS3218MG_servo_object.STL  Neopixel8x.stl  belt_bearing_tensioner_for_v2.STL
OpenQuad_V2/universel/: foot.STL
OpenQuad_V2/yellow_ros/: README.md
OpenQuad_V2/yellow_ros/src/spot_real/Control/Teensy/SpotMiniMini/: platformio.ini
OpenQuad_V2/yellow_ros/src/spot_real/Control/Teensy/SpotMiniMini/src/: main.cpp
OpenQuad_V2/yellow_ros/src/yellow_neopixels/: CMakeLists.txt  package.xml  readme.md
OpenQuad_V2/yellow_ros/src/yellow_neopixels/launch/: neopixels.launch
OpenQuad_V2/yellow_ros/src/yellow_neopixels/nodes/: neopixels.py
OpenQuad_V2/yellow_ros/src/yellow_neopixels/srv/: neopixels_message.srv
OpenQuad_V2/yellow_ros/src/yellow_oled/: CMakeLists.txt  package.xml  readme.md
OpenQuad_V2/yellow_ros/src/yellow_oled/launch/: oled.launch
OpenQuad_V2/yellow_ros/src/yellow_oled/nodes/: oled.py
OpenQuad_V2/yellow_ros/src/yellow_oled/srv/: Oled_message.srv
OpenQuad_V2/yellow_ros/test/: adc1115_test.py  adc_test.py
